// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`marks spinner as success with mark: CI 1`] = `
"[33m-[39m #success
[33m-[39m #success
[33m-[39m #success
V #success
"
`;

exports[`marks spinner as success with mark: Local 1`] = `
"[?25l[1G[33m⠋[39m #success[?25l[1G[2K[1G[33m⠙[39m #success[?25l[1G[2K[1G[33m⠹[39m #success[1G[2K[1GV #success
[?25h"
`;

exports[`marks spinner as success with message: CI 1`] = `
"[33m-[39m #success
[33m-[39m #success
[33m-[39m #success
[32m✔[39m Successful
"
`;

exports[`marks spinner as success with message: Local 1`] = `
"[?25l[1G[33m⠋[39m #success[?25l[1G[2K[1G[33m⠙[39m #success[?25l[1G[2K[1G[33m⠹[39m #success[1G[2K[1G[32m✔[39m Successful
[?25h"
`;

exports[`marks spinner as success: CI 1`] = `
"[33m-[39m #success
[33m-[39m #success
[33m-[39m #success
[32m✔[39m #success
"
`;

exports[`marks spinner as success: Local 1`] = `
"[?25l[1G[33m⠋[39m #success[?25l[1G[2K[1G[33m⠙[39m #success[?25l[1G[2K[1G[33m⠹[39m #success[1G[2K[1G[32m✔[39m #success
[?25h"
`;
